--- a/README.org
+++ b/README.org
@@ -88,6 +88,30 @@ return the value ~false~.  The receiver may ~throw std::runtime_error~ if
 a message is received which can not be deserialized into the ~TPSet~
 object.
 
+** Message Schema
+
+The main payload message type in PTMP is the ~TPSet~ and is defined in
+[[./ptmp/ptmp.proto]] which is in "protobuf" description language.  This
+is used to generate class implementations which are available to the
+application with
+
+#+BEGIN_SRC c++
+#include "ptmp/data.h"
+#+END_SRC
+
+A note on times in the message schema.  There are three types of times:
+
+- an absolute *data time* (~tstart~) expressed as ticks of the hardware
+  clock.  For protodune-SP this is the 50 MHz clock.
+
+- a relative *data time span* (~tspan~) also expressed as ticks in the
+  hardware clock.
+
+- an absolute *wall clock* time (~created~) which is a ~time_t~ value
+  expressing the number of seconds since the start of the Unix epoch.
+
+** Reference applications and tests
+
 The following applications provide reference applications.  Running
 them without command line arguments will give a usage message.
 
